Closed Bug 425593 Opened 18 years ago Closed 18 years ago

Print failure: 'Some printing functionality not implemented yet' message

Categories

(Core :: Printing: Output, defect, P2)

All
macOS
defect

Tracking

()

VERIFIED FIXED
mozilla1.9

People

(Reporter: phiw2, Assigned: vlad)

References

Details

(Keywords: regression)

Attachments

(1 file)

STR 1. open any web page 2. File > Print 3. Select Print to PDF AR : 'Some printing functionality not implemented yet' message ER : save that thing to a pdf file regressed in the past 24 hours, will try to find a more fine grained regression range Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008032719 Minefield/3.0pre
Flags: blocking1.9?
Blocks: 409953
Summary: Print: 'Some printing functionality not implemented yet' message → Print failure: 'Some printing functionality not implemented yet' message
Hmm, I thought I caught all of the NS_ERROR_NOT_IMPLEMENTEDs, maybe not?
Assignee: nobody → vladimir
Flags: blocking1.9? → blocking1.9+
Priority: -- → P2
Attachment #312218 - Attachment is patch: true
Attachment #312218 - Attachment mime type: application/octet-stream → text/plain
Attachment #312218 - Flags: review?(pavlov) → review+
Checked in
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
thanks, works perfectly now. --> verified Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9pre) Gecko/2008032806 Minefield/3.0pre
Status: RESOLVED → VERIFIED
Target Milestone: --- → mozilla1.9
Hardware: PC → All
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: