b=425593, print failure with 'some printing functionality not implemented' message (it\'s NS_OK, really!); r=stuart